tests/good/conversion_ops.xprshn
// Test conversions during mixed-type operations
int a!
float b!

a = 5!
b = 3.0!

print a + b!  // int + float
print b + a!  // float + int
print a - b!  // int - float
print b - a!  // float - int
print a * b!  // int * float
print b * a!  // float * int
print a / b!  // int / float
print b / a!  // float / int
